--- a/templates/customer/base.html
+++ b/templates/customer/base.html
@@ -80,6 +80,11 @@
                     <i class="fas fa-chart-line w-6 text-center"></i>
                     <span class="menu-text whitespace-nowrap">Dashboard</span>
                 </a>
+
+                <a href="{{ url_for('customer_conversations') }}" class="menu-item flex items-center space-x-4 px-6 py-3 text-gray-600">
+                    <i class="fas fa-comments w-6 text-center"></i>
+                    <span class="menu-text whitespace-nowrap">Konuşmalar</span>
+                </a>
                 
                 <a href="{{ url_for('ai_settings') }}" class="menu-item flex items-center space-x-4 px-6 py-3 text-gray-600">
                     <i class="fas fa-cog w-6 text-center"></i>
